set nupkg version properly

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,5 @@ script:
   - dotnet test
   - cd ../EasyConfig.Net.Core
   - dotnet restore
-  - dotnet pack -o . --version-suffix $TRAVIS_BUILD_NUMBER
+  - dotnet pack -o . /p:Version=1.0.$TRAVIS_BUILD_NUMBER
   - dotnet nuget push EasyConfig.Net.Core.*.nupkg -k $NugetApiKey -s https://www.nuget.org/
