only build master

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,6 @@ script:
   - dotnet restore
   - dotnet pack -o . /p:Version=1.0.$TRAVIS_BUILD_NUMBER
   - dotnet nuget push EasyConfig.Net.Core.*.nupkg -k $NugetApiKey -s https://www.nuget.org/
+branches:
+  only:
+  - master
