--- a/EasyConfig.Net.Core/EasyConfig.Net.Core.csproj
+++ b/EasyConfig.Net.Core/EasyConfig.Net.Core.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.6</TargetFrameworks>
+    <TargetFrameworks>netstandard1.6; net462</TargetFrameworks>
     <RootNamespace>EasyConfig</RootNamespace>
   </PropertyGroup>
 
