--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,19 @@ addons:
       key_url: 'https://apt-mo.trafficmanager.net/keys/microsoft.asc'
     packages:
     - dotnet-dev-1.0.1
-script:
-  - cd EasyConfig.UnitTests
-  - dotnet restore
-  - dotnet test
-  - cd ../EasyConfig.Net.Core
-  - dotnet restore
-  - dotnet pack -o . /p:Version=1.0.$TRAVIS_BUILD_NUMBER
-  - dotnet nuget push EasyConfig.Net.Core.*.nupkg -k $NugetApiKey -s https://www.nuget.org/
-branches:
-  only:
-  - master
+jobs:
+  include:
+    - script: test
+      - cd EasyConfig.UnitTests
+      - dotnet restore
+      - dotnet test
+    - stage: pack
+      branches:
+        only:
+          - master
+      - script:
+      - cd ../EasyConfig.Net.Core
+      - dotnet restore
+      - dotnet pack -o . /p:Version=1.0.$TRAVIS_BUILD_NUMBER
+      - dotnet nuget push EasyConfig.Net.Core.*.nupkg -k $NugetApiKey -s https://www.nuget.org/
+
