in correct directory

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ jobs:
         only:
           - master
       script:
-      - cd ../EasyConfig.Net.Core
+      - cd EasyConfig.Net.Core
       - dotnet restore
       - dotnet pack -o . /p:Version=1.0.$TRAVIS_BUILD_NUMBER
       - dotnet nuget push EasyConfig.Net.Core.*.nupkg -k $NugetApiKey -s https://www.nuget.org/
