--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,10 @@ script:
   - cd EasyConfig.UnitTests
   - dotnet restore
   - dotnet test
-  - if [ -z "$TRAVIS_PULL_REQUEST_BRANCH"]; then travis_terminate 0; fi;
   - cd EasyConfig.Net.Core
   - dotnet restore
-  - dotnet pack -o . /p:Version=1.0.$TRAVIS_BUILD_NUMBER
+  - dotnet build -f netstandard1.6 -c Release
+  - xbuild ./EasyConfig.Net.Core.sln /p:Configuration=Release /p:TargetFrameworkVersion=v4.6.2 /toolsversion:12.0
+  - dotnet pack --no-build -o . /p:Version=1.0.$TRAVIS_BUILD_NUMBER
+  - if [ -z "$TRAVIS_PULL_REQUEST_BRANCH"]; then travis_terminate 0; fi;
   - dotnet nuget push EasyConfig.Net.Core.*.nupkg -k $NugetApiKey -s https://www.nuget.org/
