--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ script:
   - cd EasyConfig.UnitTests
   - dotnet restore
   - dotnet test
-  - cd EasyConfig.Net.Core
+  - cd ../EasyConfig.Net.Core
   - dotnet restore
   - dotnet build -f netstandard1.6 -c Release
   - xbuild ./EasyConfig.Net.Core.sln /p:Configuration=Release /p:TargetFrameworkVersion=v4.6.2 /toolsversion:12.0
