--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ script:
   - cd ../EasyConfig.Net.Core
   - dotnet restore
   - dotnet build -f netstandard1.6 -c Release
-  - xbuild ./EasyConfig.Net.Core.sln /p:Configuration=Release /p:TargetFrameworkVersion=v4.6.2 /toolsversion:12.0
+  - xbuild ./EasyConfig.Net.Core.sln /p:Configuration=Release /p:TargetFrameworkVersion=v4.6.2
   - dotnet pack --no-build -o . /p:Version=1.0.$TRAVIS_BUILD_NUMBER
   - if [ -z "$TRAVIS_PULL_REQUEST_BRANCH"]; then travis_terminate 0; fi;
   - dotnet nuget push EasyConfig.Net.Core.*.nupkg -k $NugetApiKey -s https://www.nuget.org/
