--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,7 @@ dist: trusty
 sudo: required
 mono:
   - latest
-addons:
-  apt:
-    sources:
-    - sourceline: 'deb [arch=amd64] https://apt-mo.trafficmanager.net/repos/dotnet-release/ trusty main'
-      key_url: 'https://apt-mo.trafficmanager.net/keys/microsoft.asc'
-    packages:
-    - dotnet-dev-1.0.1
+dotnet: 1.0.4
 script:
   - cd EasyConfig.UnitTests
   - dotnet restore
