--- a/EasyConfig.UnitTests/EasyConfig.UnitTests.csproj
+++ b/EasyConfig.UnitTests/EasyConfig.UnitTests.csproj
@@ -3,7 +3,11 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
-
+  
+  <ItemGroup>
+    <DotNetCliToolReference Include="Microsoft.DotNet.Watcher.Tools" Version="1.0.0" />
+  </ItemGroup>
+  
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0"></PackageReference>
 	<PackageReference Include="NUnit" Version="3.7.1"></PackageReference>
