--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,7 @@ script:
   - cd EasyConfig.UnitTests
   - dotnet restore
   - dotnet test
-  - if [ -z "$TRAVIS_PULL_REQUEST_BRANCH"]; then travis_terminate 0; fi;
   - cd EasyConfig.Net.Core
   - dotnet restore
   - dotnet pack -o . /p:Version=1.0.$TRAVIS_BUILD_NUMBER
-  - dotnet nuget push EasyConfig.Net.Core.*.nupkg -k $NugetApiKey -s https://www.nuget.org/
+  - if [ "$TRAVIS_PULL_REQUEST" = "false"]; dotnet nuget push EasyConfig.Net.Core.*.nupkg -k $NugetApiKey -s https://www.nuget.org/; fi;
