--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ script:
   - cd EasyConfig.UnitTests
   - dotnet restore
   - dotnet test
-  - cd EasyConfig.Net.Core
+  - cd ../EasyConfig.Net.Core
   - dotnet restore
   - dotnet pack -o . /p:Version=1.0.$TRAVIS_BUILD_NUMBER
   - if [ "$TRAVIS_PULL_REQUEST" = "false"]; dotnet nuget push EasyConfig.Net.Core.*.nupkg -k $NugetApiKey -s https://www.nuget.org/; fi;
