--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ script:
   - cd ../EasyConfig.Net.Core
   - dotnet restore
   - dotnet pack -o . /p:Version=1.0.$TRAVIS_BUILD_NUMBER
-  - if [ "$TRAVIS_PULL_REQUEST" = "false"]; dotnet nuget push EasyConfig.Net.Core.*.nupkg -k $NugetApiKey -s https://www.nuget.org/; fi;
+  - if [ "$TRAVIS_PULL_REQUEST" = "false"]; dotnet nuget push EasyConfig.Net.Core.*.nupkg -k $NugetApiKey -s https://www.nuget.org/; fi
