--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,11 @@ addons:
     packages:
     - dotnet-dev-1.0.1
 script:
+  - if [ -z "$TRAVIS_PULL_REQUEST" ]; then travis_terminate $TRAVIS_TEST_RESULT; fi;
   - cd EasyConfig.UnitTests
   - dotnet restore
   - dotnet test
   - cd ../EasyConfig.Net.Core
   - dotnet restore
   - dotnet pack -o . /p:Version=1.0.$TRAVIS_BUILD_NUMBER
-  - if [ -z "$TRAVIS_PULL_REQUEST_BRANCH"]; then travis_terminate $TRAVIS_TEST_RESULT; fi;
   - dotnet nuget push EasyConfig.Net.Core.*.nupkg -k $NugetApiKey -s https://www.nuget.org/
