fix error for overridable variables

--- a/EasyConfig.Net.Sample/config.json
+++ b/EasyConfig.Net.Sample/config.json
@@ -3,6 +3,6 @@
   "NestedObject": {
     "InConfigJson": "nested-object"
   },
-  "Overridable": "can-be-overridden",
+  "Overridable": true,
   "OverridableAlternativeKey": "can-be-overridden-with-alternative-key"
 }
