--- a/EasyConfig.UnitTests/EasyConfig.UnitTests.csproj
+++ b/EasyConfig.UnitTests/EasyConfig.UnitTests.csproj
@@ -1,27 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
-  
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.DotNet.Watcher.Tools" Version="1.0.0" />
   </ItemGroup>
-  
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0"></PackageReference>
-	<PackageReference Include="NUnit" Version="3.7.1"></PackageReference>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0">
+    </PackageReference>
+    <PackageReference Include="NUnit" Version="3.8.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.8.0" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\EasyConfig.Net.Core\EasyConfig.Net.Core.csproj" />
   </ItemGroup>
-
   <ItemGroup>
-    <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}"></Service>
+    <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}">
+    </Service>
   </ItemGroup>
-
   <ItemGroup>
     <None Update="config.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
