--- a/EasyConfig.Net.Core/EasyConfig.Net.Core.csproj
+++ b/EasyConfig.Net.Core/EasyConfig.Net.Core.csproj
@@ -1,13 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFrameworks>netstandard1.6</TargetFrameworks>
     <RootNamespace>EasyConfig</RootNamespace>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="1.1.2" />
+    <PackageReference Include="NETStandard.Library" Version="2.0.0" />
   </ItemGroup>
-
 </Project>
