--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,8 @@
 language: csharp
+mono: none
 dist: trusty
+dotnet: 2.0.0
 sudo: required
-addons:
-  apt:
-    sources:
-    - sourceline: 'deb [arch=amd64] https://apt-mo.trafficmanager.net/repos/dotnet-release/ trusty main'
-      key_url: 'https://apt-mo.trafficmanager.net/keys/microsoft.asc'
-    packages:
-    - dotnet-dev-1.0.1
 script:
   - cd EasyConfig.UnitTests
   - dotnet restore
