modify travis to use matrix builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: csharp
 mono: none
 dist: trusty
-dotnet: 2.0.0
+dotnet: 
+- 1.0.3
+- 2.0.0
 sudo: required
 script:
   - cd EasyConfig.UnitTests
